temp fix for improving readability of book page title
git-svn-id: https://svn.library.cornell.edu/signaletheme/trunk@273 fd91eecc-2661-4fc6-be0c-6e8cf4f2035b

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -200,3 +200,21 @@ footer {
 	}
 }
 .view-display-id-page_2 { height: 900px; }
+
+/* Book page */
+/***************************/
+
+// temp fix for the page title to improve readability; delete or comment out if able to fix the page title so it says "BOOKS" instead of node title (jira issue: https://issues.library.cornell.edu/browse/CULUX-34)
+.page-books {
+	.page-title {
+		h2 {
+			.text-transform: none;
+			font-size: 2em;
+			width: 75%;
+			padding: 10px 50px 10px 20px;
+		}
+	}
+	.main-content {
+		margin-top: 50px;
+	}
+}
